Wa geprobeert me ne login maar terug verwijdert

--- a/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
@@ -48,6 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Facebook">
+      <HintPath>..\packages\Facebook.5.4.1.0\lib\sl3-wp\Facebook.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Controls" />
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL">
