--- a/MM Systems/PanoramaApp3/PanoramaApp3/packages.config
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Facebook" version="5.4.1.0" targetFramework="wp71" />
   <package id="SilverlightToolkitWP" version="4.2012.6.25" targetFramework="wp71" />
 </packages>
