static class add

--- a/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
@@ -102,6 +102,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
     <Compile Include="ViewModels\DateViewModel.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
