--- a/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
+++ b/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
@@ -126,6 +126,12 @@
       <DependentUpon>DataClasses.dbml</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\PasswordHashGen\PasswordHashGen.csproj">
+      <Project>{a753db32-277f-4f28-af27-a39413bd9ca8}</Project>
+      <Name>PasswordHashGen</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
