--- a/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
+++ b/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
@@ -90,6 +90,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activities.cs" />
     <Compile Include="DataClasses.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
