Added login for the web app edited the wcf service for getting the user info

--- a/MM Systems/WebApp/WebApp/WebApp.csproj
+++ b/MM Systems/WebApp/WebApp/WebApp.csproj
@@ -100,7 +100,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="User.cs" />
-    <Compile Include="UserControl\Login.xaml.cs">
+    <Compile Include="UC\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ErrorWindow.xaml.cs">
@@ -141,7 +141,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserControl\Login.xaml">
+    <Page Include="UC\Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
