service reference edited

--- a/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
+++ b/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Service.svc.cs">
       <DependentUpon>Service.svc</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
