--- a/MM Systems/WebApp/WebApp.Web/index.Web.csproj
+++ b/MM Systems/WebApp/WebApp.Web/index.Web.csproj
@@ -84,8 +84,8 @@
     <Content Include="ReadMe.Coding4Fun.Toolkit.txt" />
     <Content Include="Silverlight.js" />
     <Content Include="Web.config" />
-    <Content Include="WebAppTestPage.aspx" />
-    <Content Include="WebAppTestPage.html" />
+    <Content Include="index.aspx" />
+    <Content Include="index.html" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
