--- a/MM Systems/WebApp/WebApp/packages.config
+++ b/MM Systems/WebApp/WebApp/packages.config
@@ -5,4 +5,11 @@
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.7" targetFramework="sl50" />
   <package id="Coding4Fun.Toolkit.Net" version="2.0.7" targetFramework="sl50" />
   <package id="Coding4Fun.Toolkit.Storage" version="2.0.7" targetFramework="sl50" />
+  <package id="SilverlightToolkit-All" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Core" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Data" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-DataViz" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Input" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Layout" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Theming" version="4.2010.4" targetFramework="sl50" />
 </packages>
