--- a/MM Systems/WebApp/WebApp/WebApp.csproj
+++ b/MM Systems/WebApp/WebApp/WebApp.csproj
@@ -161,6 +161,9 @@
     <Compile Include="Views\Resultaten.xaml.cs">
       <DependentUpon>Resultaten.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Weeromstandigheden.xaml.cs">
+      <DependentUpon>Weeromstandigheden.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -180,6 +183,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Resultaten.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Weeromstandigheden.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
